alignment issue fixed

--- a/frontend/src/components/NewsArticle/NewsArticle.css
+++ b/frontend/src/components/NewsArticle/NewsArticle.css
@@ -4,7 +4,7 @@
     height: 250px;
     width: 680px;
     border: 2px solid #f1f8f1;
-    background-color: rgb(213, 171, 171);
+    background-color: rgb(254, 166, 166);
   }
 
   .NewsArticleRight {
